minor bug fix with collapse navbar

--- a/app/css/dash.css
+++ b/app/css/dash.css
@@ -12,7 +12,7 @@ body {
 
 
 #wrapper {
-	padding-left: 40px;
+	padding-left: 0px;
 	margin-left: 0px;
 }
 
